# AT_robot

./: README.md
Arduino libraries/USSensor/: USSensor.h
Arduino/echo_testing/: echo_testing.ino
Arduino/libraries/USSensor/: USSensor.cpp
at_robot_arduino/: ATR_ultrasonic_node.ino  readme.txt
at_robot_drive/: CMakeLists.txt  package.xml  readme.txt
at_robot_drive/launch/: launch_arduino.launch
at_robot_drive/scripts/: drive_controller.py
at_robot_simulation/: CMakeLists.txt  package.xml  readme.txt
at_robot_simulation/config/: diff_drive.yaml  driveunit_controller.yaml  joints.yaml
at_robot_simulation/launch/: diff_drive.launch  display.launch  driveunit.launch  simple.launch  simpleRobot_gazebo.launch  spawn.launch
at_robot_simulation/meshes/: Engine_plate2.stl  HC-SR04.stl  Hjul2.stl  Hylsa6.stl  Motor2.stl  Ottomanhjul.stl  Platta.stl  al_570.stl  al_800.stl  bord.dae  hjul.dae  justerhjul.stl  motor_table.dae  ram.dae  suspension.dae
at_robot_simulation/rviz/: driveunit.rviz  simple.rviz
at_robot_simulation/scripts/: distance_sensors.py  drive_simple_robot.py  main.py  purepursuit.py  regulator.py  table_controller.py  test.py
at_robot_simulation/urdf/: Drivsystem.urdf  Ram.urdf  Ram_urdf.urdf  driveunit.xacro  drivsystem.urdf  gazebo_stuff.xacro  m2wr.xacro  macros.xacro  materials.xacro  meshes_macros.xacro  simpleRobot.xacro  table.xacro  ultrasonic.xacro
at_robot_simulation/worlds/: empty_world.world
at_robot_simulation/worlds/models/3cmKabel/: model.sdf
at_robot_simulation/worlds/models/kabel/: model.sdf
at_robot_simulation/worlds/models/ramp/: model.sdf
atr_msgs/: CMakeLists.txt  package.xml
atr_msgs/src/: client.cpp
atr_msgs/srv/: changestate.srv  table.srv
other/Arduino/echo_testing/: no_class.ino  no_class_text.odt
other/at_robot_arduino/: arduino_node.ino
other/at_robot_drive/scripts/: keyboard2.py
other/worlds/: empty_world.world
other/worlds/models/3cmKabel/: model.config  model.sdf
other/worlds/models/kabel/: model.config
other/worlds/models/ramp/: model.config
other/worlds/models/wall1/: model.config  model.sdf
other/worlds/models/wall2/: model.config  model.sdf
other/worlds/models/wall3/: model.config  model.sdf
